Use Azure Keyvault

--- a/WeatherApp/appsettings.json
+++ b/WeatherApp/appsettings.json
@@ -7,7 +7,11 @@
   },
   "AllowedHosts": "*",
   "OpenWeatherApi": {
-    "BaseAddress": "http://api.openweathermap.org",
-    "AppId": "f2df931cb40d99fb0a78202dfd88758d"
+    "BaseAddress": "http://api.openweathermap.org"    
+  },
+  "KeyVaultConfiguration": {
+    "KeyVaultURL": "https://weatherappid.vault.azure.net/",
+    "ClientId": "",
+    "ClientSecret": ""
   }
 }
